fix search,filter